--- a/usecasediagram/diagramscene.qrc
+++ b/usecasediagram/diagramscene.qrc
@@ -15,6 +15,10 @@
     <file>images/background2.png</file>
     <file>images/background3.png</file>
     <file>images/background4.png</file>
+  <file>images/actor.png</file>
+  <file>images/comment.png</file>
+  <file>images/usecase.png</file>
+  <file>images/pic.png</file>
 </qresource>
 </RCC>
 
