--- a/usecase_python/diagramscene.qrc
+++ b/usecase_python/diagramscene.qrc
@@ -6,6 +6,7 @@
     <file>images/linedottedpointer.png</file>
     <file>images/delete.png</file>
     <file>images/actor.png</file>
+    <file>images/actor1.png</file>
 	<file>images/usecase.png</file>
 	<file>images/comment.png</file>
 	<file>images/pic.png</file>
